<resources>
  <string name="app_name">Movie Info</string>

  <!--  DUMMY TEXT-->
  <string name="movie_name">Pikachu</string>
  <string name="movie_release_date">Monday, 01 January 2019</string>
  <string name="movie_overview">Overview Content</string>
  <string name="movie_person_name">Dwayne Johnson</string>
  <string name="movie_biography">Biography Description.</string>
  <string name="movie_caption_now_playing">NOW PLAYING</string>
  <string name="movie_caption_top_rated">TOP RATED</string>
  <string name="movie_caption_popular">POPULAR</string>
  <string name="movie_caption_upcoming">UPCOMING</string>

  <!--  Detail Activity-->
  <string name="detail_overview_caption">Overview</string>
  <string name="detail_cast_caption">Cast</string>
  <string name="detail_no_description_caption">No Description</string>

  <!--  Now Playing-->
  <string name="now_playing_loading_caption">Loading…</string>

  <!--  Bottom Navigation-->
  <string name="navigation_movie">Movie</string>
  <string name="navigation_favorite">Favorite</string>
  <string name="navigation_history">History</string>

</resources>
