<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

  <data>
    <variable
        name="viewModel"
        type="grack.dev.moviedagger.ui.detail.DetailViewModel" />
  </data>

  <androidx.coordinatorlayout.widget.CoordinatorLayout
      android:id="@+id/container_bottom"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:behavior_hideable="true"
      app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
      tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/image_blur"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:blur="@{viewModel.result.posterPath}"
          android:scaleType="fitXY"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          tools:src="@drawable/pikachu_blur" />

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/button_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:src="@drawable/ic_close"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/text_title"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:singleLine="true"
          android:text="@{viewModel.result.title}"
          android:textAlignment="center"
          android:textAppearance="@style/H5"
          android:textColor="@color/white_FFFFFF"
          app:layout_constraintBottom_toBottomOf="@id/button_back"
          app:layout_constraintEnd_toStartOf="@id/button_favorite"
          app:layout_constraintStart_toEndOf="@id/button_back"
          app:layout_constraintTop_toTopOf="@id/button_back"
          tools:text="@string/movie_name" />

      <androidx.appcompat.widget.AppCompatImageView
          android:id="@+id/button_favorite"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="16dp"
          android:src="@drawable/ic_favorite_border"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.card.MaterialCardView
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:layout_marginStart="30dp"
          android:layout_marginTop="30dp"
          android:layout_marginEnd="30dp"
          android:layout_marginBottom="30dp"
          android:padding="16dp"
          app:cardCornerRadius="10dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/text_title">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

          <androidx.constraintlayout.widget.ConstraintLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_backdrop"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:url="@{viewModel.result.backdropPath}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/pikachu" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/container_poster"
                android:layout_width="170dp"
                android:layout_height="255dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="@id/image_backdrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_backdrop">

              <androidx.constraintlayout.widget.ConstraintLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_poster"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:scaleType="fitXY"
                    android:tint="@color/black_6F000000"
                    android:url="@{viewModel.result.posterPath}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/pikachu" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/button_trailer"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_play"
                    app:layout_constraintBottom_toBottomOf="@id/image_poster"
                    app:layout_constraintEnd_toEndOf="@id/image_poster"
                    app:layout_constraintStart_toStartOf="@id/image_poster"
                    app:layout_constraintTop_toTopOf="@id/image_poster" />

              </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:numStars="5"
                android:rate="@{viewModel.result.voteAverage}"
                android:stepSize="0.1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/container_poster"
                tools:rating="4.7" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:date="@{viewModel.result.releaseDate}"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAppearance="@style/Subtitle1"
                android:textColor="@color/black_000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rating_bar"
                tools:text="@string/movie_release_date" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="16dp"
                android:background="@color/dove_gray_636363"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_release_date" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_overview_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="@font/montserrat_medium"
                android:padding="8dp"
                android:text="@string/detail_overview_caption"
                android:textAllCaps="true"
                android:textAppearance="@style/Body2"
                android:textColor="@color/dove_gray_636363"
                app:layout_constraintBottom_toBottomOf="@id/divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/divider" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@{viewModel.result.overview}"
                android:textAlignment="center"
                android:textAppearance="@style/Body2"
                android:textColor="@color/black_000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_overview_caption"
                app:layout_constraintVertical_bias="0"
                tools:text="@string/movie_overview" />

            <View
                android:id="@+id/divider2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@color/dove_gray_636363"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_overview" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_caption_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/detail_cast_caption"
                android:textColor="@color/black_000000"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_caption_cast"
                app:layout_constraintVertical_bias="0"
                tools:listitem="@layout/item_cast" />

          </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

      </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
